[fix] "Download" and "Close" was not centered from modal.patch.zip

--- a/assets/stylesheets/application.css
+++ b/assets/stylesheets/application.css
@@ -177,3 +177,7 @@ div.git h3 {
         padding: 4px 0 4px 20px;
     }
 }
+
+button.ui-button {
+    height: unset;
+}
